update apache repos + don't fork tests
git-svn-id: https://svn1.hosted-projects.com/transparentpolitics/amplafi-flow/amplafi-opensource-parent/trunk@416 6eaf30a2-012b-4626-ba8e-69dab18af4f2